--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,6 @@ spring:
     name: task
 
   datasource:
-    url: jdbc:h2:mem:db;MODE=MYSQL
     driver-class-name: org.h2.Driver
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
@@ -14,10 +13,16 @@ spring:
       path: /h2-console
 
   jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: create
-    show-sql: true
+      ddl-auto: update
     properties:
       hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
         format_sql: true
         use_sql_comments: true
+        show_sql: true
+    open-in-view: false
+
+server:
+  port: 8080
